# hippogriff

./: .gitignore  README.md  hippogriff.py  model.py  multiquery_ar.py  pyproject.toml  requirements.txt  test_chunker.py  train.py  train_checkpoints.py  train_diagnostics.py  train_init.py  train_tape.py
sweeps/: alpha_log_scale.py  forget_init.py  mem_stacked.py  mqar.py  mqar_stacked.py
